# hala

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  index.html
.github/workflows/: build-ubuntu.yaml
blas/: hala_blas.hpp  hala_blas_1.hpp  hala_blas_2.hpp  hala_blas_3.hpp  hala_blas_external.hpp  hala_blas_overloads.hpp
cmake/: FindHALACholmod.cmake  HALAConfig.cmake  check_align.cmake  check_align16.cpp  check_align32.cpp  check_align64.cpp  check_the_checks.cmake  check_the_checks.cpp  hala_config.hpp  hala_helpers.cmake  post_install_test.sh
common/: hala.h  hala.hpp  hala_common.hpp  hala_core.hpp  hala_cpu_engine.hpp  hala_input_checker.hpp  hala_types_caster.hpp  hala_types_checker.hpp  hala_types_helpers.hpp  hala_vector_defines.hpp  hala_wrap_array.hpp
doxygen/: CMakeLists.txt  basic_usage.md  hala.css  header.html  installation.md  motivation.md
examples/: CMakeLists.txt  CMakeLists.txt.cmake  example_bench_mygpu.cpp  example_gauss_seidel.cpp  example_gpu.cpp  example_vex.cpp
gpu/: hala_cuda.hpp  hala_cuda_common.hpp  hala_cuda_sparse_general.hpp  hala_cuda_sparse_triangular.hpp  hala_gpu.hpp  hala_gpu_blas0.hpp  hala_gpu_blas1.hpp  hala_gpu_blas2.hpp  hala_gpu_blas3.hpp  hala_gpu_engine.hpp  hala_gpu_ilu.hpp  hala_gpu_overloads.hpp  hala_gpu_plu.hpp  hala_gpu_vector.hpp  hala_gpu_wrap_array.hpp  hala_rocm.hpp  hala_rocm_common.hpp  hala_rocm_sparse_general.hpp  hala_rocm_sparse_triangular.hpp
hex/cholmod/: hala_cholmod.hpp  hala_cholmod_defines.hpp
hex/solvers/: hala_solvers.hpp  hala_solvers_cg.hpp  hala_solvers_cg_batch.hpp  hala_solvers_core.hpp  hala_solvers_gmres.hpp
hex/vex/: hala_aligned_allocator.hpp  hala_bindpack.hpp  hala_intrinsics.hpp  hala_intrinsics_macros.hpp  hala_mmpack.hpp  hala_vex.hpp
lapack/: hala_lapack.hpp  hala_lapack_external.hpp  hala_lapack_plu.hpp
sparse/: hala_sparse.hpp  hala_sparse_blas.hpp  hala_sparse_core.hpp  hala_sparse_ilu.hpp  hala_sparse_structs.hpp  hala_sparse_utils.hpp
stable/: annotated.html  annotated_dup.js  classes.html  classhala_1_1aligned__allocator-members.html  classhala_1_1aligned__allocator.html  classhala_1_1aligned__allocator.js  classhala_1_1cholmod__factor-members.html  classhala_1_1cholmod__factor.html  classhala_1_1cholmod__factor.js  classhala_1_1cholmod__factor_1_1chol__dense__vector-members.html  classhala_1_1cholmod__factor_1_1chol__dense__vector.html  classhala_1_1cholmod__factor_1_1chol__dense__vector.js  classhala_1_1cpu__triangular__matrix-members.html  classhala_1_1cpu__triangular__matrix.html  classhala_1_1cpu__triangular__matrix.js  classhala_1_1gpu__triangular__matrix-members.html  classhala_1_1gpu__triangular__matrix.html  classhala_1_1gpu__triangular__matrix.js  classhala_1_1gpu__vector-members.html  classhala_1_1gpu__vector.html  classhala_1_1gpu__vector.js  classhala_1_1gpu__wrapped__array-members.html  classhala_1_1gpu__wrapped__array.html  classhala_1_1gpu__wrapped__array.js  classhala_1_1wrapped__array-members.html  classhala_1_1wrapped__array.html  classhala_1_1wrapped__array.js  dir_000003_000002.html  dir_000003_000005.html  dir_000009_000000.html  dir_000010_000000.html  dir_000011_000009.html  dir_42b7da8b2ebcfce3aea4b69198a0a9ad.html  dir_42b7da8b2ebcfce3aea4b69198a0a9ad.js  dir_42b7da8b2ebcfce3aea4b69198a0a9ad_dep.map  dir_42b7da8b2ebcfce3aea4b69198a0a9ad_dep.md5  dir_61e390ac920cae61ea193703242e2fc4.html  dir_61e390ac920cae61ea193703242e2fc4.js  dir_6916670783d6f606ddea15a62d5bfc68.html  dir_6916670783d6f606ddea15a62d5bfc68.js  (+875 more)
stable/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  defines_0.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  (+69 more)
tests/: CMakeLists.txt  blas1_tests.hpp  blas2_tests.hpp  blas3_tests.hpp  blas_tests.cpp  blas_tests.hpp  blas_with_engine.cpp  blas_with_noengine.cpp  cholmod_tests.cpp  core_tests.cpp  core_tests.hpp  cuda_blas0_tests.hpp  cuda_blas1_tests.hpp  cuda_blas2_tests.hpp  cuda_blas3_tests.hpp  cuda_core_tests.hpp  cuda_sparse_tests.hpp  cuda_tests.cpp  lapack1_tests.hpp  lapack_plu_tests.hpp  lapack_tests.cpp  lapack_tests.hpp  lapack_with_engine.cpp  lapack_with_noengine.cpp  solvers_tests.cpp  solvers_tests.hpp  sparse_tests.cpp  sparse_tests.hpp  sparse_with_engine.cpp  sparse_with_noengine.cpp  testing_common.hpp  vex_tests.cpp  vex_tests.hpp
wax/: hala_blas_extensions.hpp  hala_extensions_checker.hpp  hala_lib_extensions.hpp  hala_mixed_overloads.hpp  hala_noengine_overloads.hpp  hala_noengine_structs.hpp  hala_sparse_extensions.hpp  hala_wrapped_extensions.hpp
